{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 340,
  "lineage": "aa93fcc8-89c7-2b88-fe33-152baa944cf1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T02:49:15.786-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/smarthome-chban/global/firewalls/cluster01-fw-allow-http",
            "name": "cluster01-fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
            "priority": 1000,
            "project": "smarthome-chban",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/firewalls/cluster01-fw-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-https",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T02:49:15.890-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/smarthome-chban/global/firewalls/cluster01-fw-allow-https",
            "name": "cluster01-fw-allow-https",
            "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
            "priority": 1000,
            "project": "smarthome-chban",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/firewalls/cluster01-fw-allow-https",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "https"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T02:49:15.794-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/smarthome-chban/global/firewalls/cluster01-fw-allow-ssh",
            "name": "cluster01-fw-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
            "priority": 1000,
            "project": "smarthome-chban",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/firewalls/cluster01-fw-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "vpc-firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "6443",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-07-02T02:49:15.767-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/smarthome-chban/global/firewalls/cluster01-http-k8s-ports",
            "name": "cluster01-http-k8s-ports",
            "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
            "priority": 1000,
            "project": "smarthome-chban",
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/firewalls/cluster01-http-k8s-ports",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master01",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210623",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/disks/master01"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/smarthome-chban/zones/asia-southeast1-b/instances/master01",
            "instance_id": "1386675467959099378",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "wachayathorn.singsena:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMdv/VzXE2iHq8vsjG9Kn38gMA3la7s+gy8koDBVse9E/Y2a0/MR8sbfpGNDjbOrKxatzX7w1R6wOBGS3VUsSnhUMtGaihcau39JytVBWw8SoXdx71GyGDvQcf/jw34Udy5Euzog2mj4aYxliHrtYiJ+u7IvMHuriVSndrKEkvagmlsYw1mu/RXT4mnaW+67s12Zn9wOdz6JcDJorVXwMp7Qi1M+QwDTTWXg5ia2JZmQ7XK4LStIHE4V0obyRC0mDBA/X6JKc8W5AcmhRtEhkhM8LYEG6zGBq/Z1WS0HCADA9Z14lTlW+/flJqxy7ryCH4ug72Jg9t71jmWaGtc/6DeHpi8GSG9e64fM4KbYNHGSR+ycgtJAv4Kz2aOR6JWL+CTOLmrxZbKkA70PrnRQuTM96PBPl [...]
            },
            "metadata_fingerprint": "rEsjz0RA0k4=",
            "name": "master01",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.199.220",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
                "network_ip": "10.148.15.212",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "smarthome-chban"
              }
            ],
            "project": "smarthome-chban",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/instances/master01",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master02",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210623",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/disks/master02"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/smarthome-chban/zones/asia-southeast1-b/instances/master02",
            "instance_id": "2956980369677836274",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "wachayathorn.singsena:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMdv/VzXE2iHq8vsjG9Kn38gMA3la7s+gy8koDBVse9E/Y2a0/MR8sbfpGNDjbOrKxatzX7w1R6wOBGS3VUsSnhUMtGaihcau39JytVBWw8SoXdx71GyGDvQcf/jw34Udy5Euzog2mj4aYxliHrtYiJ+u7IvMHuriVSndrKEkvagmlsYw1mu/RXT4mnaW+67s12Zn9wOdz6JcDJorVXwMp7Qi1M+QwDTTWXg5ia2JZmQ7XK4LStIHE4V0obyRC0mDBA/X6JKc8W5AcmhRtEhkhM8LYEG6zGBq/Z1WS0HCADA9Z14lTlW+/flJqxy7ryCH4ug72Jg9t71jmWaGtc/6DeHpi8GSG9e64fM4KbYNHGSR+ycgtJAv4Kz2aOR6JWL+CTOLmrxZbKkA70PrnRQuTM96PBPl [...]
            },
            "metadata_fingerprint": "rEsjz0RA0k4=",
            "name": "master02",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.185.190.1",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
                "network_ip": "10.148.15.213",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "smarthome-chban"
              }
            ],
            "project": "smarthome-chban",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/instances/master02",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-b"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20210623",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/disks/worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/smarthome-chban/zones/asia-southeast1-b/instances/worker",
            "instance_id": "8220208494502174706",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "wachayathorn.singsena:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQDMdv/VzXE2iHq8vsjG9Kn38gMA3la7s+gy8koDBVse9E/Y2a0/MR8sbfpGNDjbOrKxatzX7w1R6wOBGS3VUsSnhUMtGaihcau39JytVBWw8SoXdx71GyGDvQcf/jw34Udy5Euzog2mj4aYxliHrtYiJ+u7IvMHuriVSndrKEkvagmlsYw1mu/RXT4mnaW+67s12Zn9wOdz6JcDJorVXwMp7Qi1M+QwDTTWXg5ia2JZmQ7XK4LStIHE4V0obyRC0mDBA/X6JKc8W5AcmhRtEhkhM8LYEG6zGBq/Z1WS0HCADA9Z14lTlW+/flJqxy7ryCH4ug72Jg9t71jmWaGtc/6DeHpi8GSG9e64fM4KbYNHGSR+ycgtJAv4Kz2aOR6JWL+CTOLmrxZbKkA70PrnRQuTM96PBPl [...]
            },
            "metadata_fingerprint": "rEsjz0RA0k4=",
            "name": "worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.87.136.250",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/global/networks/default",
                "network_ip": "10.148.15.211",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/regions/asia-southeast1/subnetworks/default",
                "subnetwork_project": "smarthome-chban"
              }
            ],
            "project": "smarthome-chban",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/smarthome-chban/zones/asia-southeast1-b/instances/worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-b"
          }
        }
      ]
    }
  ]
}